--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,2 +1,7 @@
 # PLANETS 
 planet.implosion-europa.name = Europa
+
+
+# SCRIPTS
+scripts.update.title = "[sky]Implosion"
+scripts.update.content = "It seems that implosion is not up to date! So do you whant to update it and restart?"
