--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -5,3 +5,4 @@ planet.implosion-europa.name = Europa
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
 scripts.update.content = "It seems that implosion is not up to date! So do you whant to update it and restart?"
+scripts.update.error.content = "[red]ERROR;failed to sync implosion"
