--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,6 +1,18 @@
 # PLANETS 
 planet.implosion-europa.name = Europa
 
+# BLOCKS
+
+##DEFENSE
+
+blocks.implosion-silver-wall.name = Silver wall
+blocks.implosion-silver-wall.description = A wall made of pure silver,not very strong.
+
+
+blocks.implosion-silver-wall-large.name = Large silver wall
+blocks.implosion-silver-wall-large.name = A larger and strongher version of the silver wall.
+
+
 
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
