--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,20 +1,33 @@
-# PLANETS 
+# PLANETS
 planet.implosion-europa.name = Europa
 
 # BLOCKS
 
 ##DEFENSE
 
-blocks.implosion-silver-wall.name = Silver wall
-blocks.implosion-silver-wall.description = A wall made of pure silver,not very strong.
+blocks.implosion-silver-wall.name = Silver Wall
+blocks.implosion-silver-wall.description = A wall made of pure silver, not very strong.
 
+blocks.implosion-silver-wall-large.name = Large Silver Wall
+blocks.implosion-silver-wall-large.description = A larger and stronger version of the silver wall.
 
-blocks.implosion-silver-wall-large.name = Large silver wall
-blocks.implosion-silver-wall-large.name = A larger and strongher version of the silver wall.
+##DISTRIBUTION
 
+blocks.implosion-silver-duct.name = Silver Duct
+blocks.implosion-silver-duct.description = Transports items at a modest speed.
 
+blocks.implosion-silver-duct-router.name = Silver Duct Router
+blocks.implosion-silver-duct-router.description = Randomly distributes items in 4 different directions.
+
+blocks.implosion-silver-duct-bridge.name = Silver Duct Bridge
+blocks.implosion-silver-duct-bridge.description = Can bridge over tiles to a length of 4 blocks maximum.
+
+##DRILLS
+
+blocks.implosion-silver-drill.name = Silver Drill
+blocks.implosion-silver-drill.description = Mines basic ores at a slow speed.
 
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
-scripts.update.content = "It seems that implosion is not up to date! So do you whant to update it and restart?"
-scripts.update.error.content = "[red]ERROR;failed to sync implosion"
+scripts.update.content = "It seems that Implosion is not up to date! Do you want to update it and restart?"
+scripts.update.error.content = "[red]ERROR: Failed to sync Implosion."
