--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -17,7 +17,7 @@ blocks.implosion-silver-duct.name = Silver Duct
 blocks.implosion-silver-duct.description = Transports items at a modest speed.
 
 blocks.implosion-silver-duct-router.name = Silver Duct Router
-blocks.implosion-silver-duct-router.description = Randomly distributes items in 4 different directions.
+blocks.implosion-silver-duct-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
 
 blocks.implosion-silver-duct-bridge.name = Silver Duct Bridge
 blocks.implosion-silver-duct-bridge.description = Can bridge over tiles to a length of 4 blocks maximum.
