--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,31 +1,31 @@
 # PLANETS
 planet.implosion-europa.name = Europa
 
-# BLOCKS
+# block
 
 ##DEFENSE
 
-blocks.implosion-silver-wall.name = Silver Wall
-blocks.implosion-silver-wall.description = A wall made of pure silver, not very strong.
+block.implosion-silver-wall.name = Silver Wall
+block.implosion-silver-wall.description = A wall made of pure silver, not very strong.
 
-blocks.implosion-silver-wall-large.name = Large Silver Wall
-blocks.implosion-silver-wall-large.description = A larger and stronger version of the silver wall.
+block.implosion-silver-wall-large.name = Large Silver Wall
+block.implosion-silver-wall-large.description = A larger and stronger version of the silver wall.
 
 ##DISTRIBUTION
 
-blocks.implosion-silver-duct.name = Silver Duct
-blocks.implosion-silver-duct.description = Transports items at a modest speed.
+block.implosion-silver-duct.name = Silver Duct
+block.implosion-silver-duct.description = Transports items at a modest speed.
 
-blocks.implosion-silver-duct-router.name = Silver Duct Router
-blocks.implosion-silver-duct-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
+block.implosion-silver-duct-router.name = Silver Duct Router
+block.implosion-silver-duct-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
 
-blocks.implosion-silver-duct-bridge.name = Silver Duct Bridge
-blocks.implosion-silver-duct-bridge.description = Can bridge over tiles to a length of 4 blocks maximum.
+block.implosion-silver-duct-bridge.name = Silver Duct Bridge
+block.implosion-silver-duct-bridge.description = Can bridge over tiles to a length of four maximum.
 
 ##DRILLS
 
-blocks.implosion-silver-drill.name = Silver Drill
-blocks.implosion-silver-drill.description = Mines basic ores at a slow speed.
+block.implosion-silver-drill.name = Silver Drill
+block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
