--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -27,6 +27,18 @@ block.implosion-silver-duct-bridge.description = Can bridge over tiles to a leng
 block.implosion-silver-drill.name = Silver Drill
 block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 
+# units
+
+##CORE
+
+unit.implosion-dromiacea.name = "Dromiacea"
+unit.implosion-dromiacea.description = "A swift,fast unit in charge of defending the crab core."
+
+##CORE
+
+unit.implosion-scout.name = "Scout"
+unit.implosion-scout.description = "TODO"
+
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
 scripts.update.content = "It seems that Implosion is not up to date! Do you want to update it and restart?"
