--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -42,4 +42,4 @@ unit.implosion-scout.description = "TODO"
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
 scripts.update.content = "It seems that Implosion is not up to date! Do you want to update it and restart?[white]"
-scripts.update.error.content = "[red]ERROR: Failed to sync Implosion.[white]"
+scripts.update.error.content = "[red]ERROR: Failed to sync Implosion,check your internet connection.[white]"
