--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -27,6 +27,11 @@ block.implosion-silver-duct-bridge.description = Can bridge over tiles to a leng
 block.implosion-silver-drill.name = Silver Drill
 block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 
+##POWER
+
+block.implosion-silver-node.name = Silver node
+block.implosion-silver-node.description = todo
+
 # units
 
 ##CORE
