--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -37,12 +37,12 @@ block.implosion-silver-node.description = todo
 ##CORE
 
 unit.implosion-dromiacea.name = "Dromiacea"
-unit.implosion-dromiacea.description = "A swift,fast unit in charge of defending the crab core."
+unit.implosion-dromiacea.description = "A swift, fast unit in charge of defending the Crab core."
 
 ##CORE
 
 unit.implosion-scout.name = "Scout"
-unit.implosion-scout.description = "TODO"
+unit.implosion-scout.description = "A quick and agile ship capable of decimating enemies. More powerful against single targets."
 
 # SCRIPTS
 scripts.update.title = "[sky]Implosion[white]"
