--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -36,15 +36,15 @@ block.implosion-silver-node.description = todo
 
 ##CORE
 
-unit.implosion-dromiacea.name = "Dromiacea"
-unit.implosion-dromiacea.description = "A swift, fast unit in charge of defending the Crab core."
+unit.implosion-dromiacea.name = Dromiacea
+unit.implosion-dromiacea.description = A swift, fast unit in charge of defending the Crab core.
 
 ##CORE
 
-unit.implosion-scout.name = "Scout"
-unit.implosion-scout.description = "A quick and agile ship capable of decimating enemies. More powerful against single targets."
+unit.implosion-scout.name = Scout
+unit.implosion-scout.description = A quick and agile ship capable of decimating enemies. More powerful against single targets.
 
 # SCRIPTS
-scripts.update.title = "[sky]Implosion[white]"
-scripts.update.content = "It seems that Implosion is not up to date! Do you want to update it and restart?[white]"
-scripts.update.error.content = "[red]ERROR: Failed to sync Implosion,check your internet connection.[white]"
+scripts.update.title = [sky]Implosion[white]
+scripts.update.content = it seems that Implosion is not up to date! Do you want to update it and restart?[white]
+scripts.update.error.content = [red]ERROR: Failed to sync Implosion,check your internet connection.[white]
