added stuff to the bundle

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -30,8 +30,18 @@ block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 ##POWER
 
 block.implosion-silver-node.name = Silver node
-block.implosion-silver-node.description = todo
+block.implosion-silver-node.description = a very small power node,cant transfer a lot of energy and need to be attached to another node due to the water.
 
+##TURRETS
+
+block.implosion-trailer.name = Trailer 
+block.implosion-trailer.description = Fires alternating Silver bullets. Can shoot flames with flammable ammo.
+
+##CORE
+
+block.implosion-core-crab.name = Core:Crab
+block.implosion-core-crab.description = Core of the base. Armored and stores a medium amount of materials.
+ 
 # units
 
 ##CORE
