--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -30,7 +30,7 @@ block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 ##POWER
 
 block.implosion-silver-node.name = Silver node
-block.implosion-silver-node.description = a very small power node,cant transfer a lot of energy and need to be attached to another node due to the water.
+block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
 
 ##TURRETS
 
