--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -58,3 +58,6 @@ unit.implosion-scout.description = A quick and agile ship capable of decimating 
 scripts.update.title = [sky]Implosion[white]
 scripts.update.content = it seems that Implosion is not up to date! Do you want to update it and restart?[white]
 scripts.update.error.content = [red]ERROR: Failed to sync Implosion,check your internet connection.[white]
+
+scripts.multicrafter.title ="[sky]implosion[white]"
+scripts.multicrafter.content = "Implosion requires multi-crafter to be installed,but it is not do you whant to install it?"
