--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -60,4 +60,4 @@ scripts.update.content = it seems that Implosion is not up to date! Do you want 
 scripts.update.error.content = [red]ERROR: Failed to sync Implosion,check your internet connection.[white]
 
 scripts.multicrafter.title =[sky]implosion[white]
-scripts.multicrafter.content = Implosion requires multi-crafter to be installed,but it is not do you whant to install it?
+scripts.multicrafter.content = Implosion requires multi-crafter to be installed
