added alot of things

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -32,6 +32,11 @@ block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 block.implosion-silver-node.name = Silver node
 block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
 
+## UNITS
+
+block.implosion-submarine-manufacturer.name = Submarine manufacturer
+block.implosion-submarine-manufacturer.description = A small submarine factory consumes power.
+
 ##TURRETS
 
 block.implosion-trailer.name = Trailer 
