added things to the bundle and renamed some unused sprites

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -16,11 +16,14 @@ block.implosion-silver-wall-large.description = A larger and stronger version of
 block.implosion-silver-duct.name = Silver Duct
 block.implosion-silver-duct.description = Transports items at a modest speed.
 
-block.implosion-silver-duct-router.name = Silver Duct Router
-block.implosion-silver-duct-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
+block.implosion-silver-router.name = Silver Duct Router
+block.implosion-silver-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
 
 block.implosion-silver-duct-bridge.name = Silver Duct Bridge
 block.implosion-silver-duct-bridge.description = Can bridge over tiles to a length of four maximum.
+
+block.implosion-silver-junction.name = Silver junction
+block.implosion-silver-junction.description = Lets you cross 2 ducts.
 
 ##DRILLS
 
@@ -31,6 +34,11 @@ block.implosion-silver-drill.description = Mines basic ores at a slow speed.
 
 block.implosion-silver-node.name = Silver node
 block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
+
+
+block.implosione-argon-ractor.name = Argon reactor
+block.implosione-argon-ractor.description = A small argon-powered reactor,produces a modest(for mid game) ammount of power.
+
 
 ## UNITS
 
