--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -36,8 +36,8 @@ block.implosion-silver-node.name = Silver node
 block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
 
 
-block.implosione-argon-ractor.name = Argon reactor
-block.implosione-argon-ractor.description = A small argon-powered reactor,produces a modest(for mid game) ammount of power.
+block.implosione-argon-ractor.name = Iodide reactor
+block.implosione-argon-ractor.description = A smalli iodide-powered reactor,produces a modest(for mid game) ammount of power.
 
 
 ## UNITS
