haha even more distribution respriting

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -13,16 +13,16 @@ block.implosion-silver-wall-large.description = A larger and stronger version of
 
 ##DISTRIBUTION
 
-block.implosion-silver-duct.name = Silver Duct
+block.implosion-silver-duct.name = Reinforced Duct
 block.implosion-silver-duct.description = Transports items at a modest speed.
 
-block.implosion-silver-router.name = Silver Duct Router
+block.implosion-silver-router.name = Reinforced Duct Router
 block.implosion-silver-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
 
-block.implosion-silver-duct-bridge.name = Silver Duct Bridge
+block.implosion-silver-duct-bridge.name = Reinforced Duct Bridge
 block.implosion-silver-duct-bridge.description = Can bridge over tiles to a length of four maximum.
 
-block.implosion-silver-junction.name = Silver junction
+block.implosion-silver-junction.name = Reinforced junction
 block.implosion-silver-junction.description = Lets you cross 2 ducts.
 
 ##DRILLS
