--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -25,6 +25,21 @@ block.implosion-silver-duct-bridge.description = Can bridge over tiles to a leng
 block.implosion-silver-junction.name = Reinforced junction
 block.implosion-silver-junction.description = Lets you cross 2 ducts.
 
+##PRODUCTION
+
+block.implosion-carbon-synthesizer.name = Carbon synthesizer
+block.implosion-carbon-synthesizer.description = weaves carbon and sand into carbon fiber.
+
+block.implosion-coal-mixer.name = Coal mixer
+block.implosion-coal-mixer.description = mixes coal into carbon.
+
+
+block.implosion-iodide-synthesizer.name = Ioidide syntesizer
+block.implosion-iodide-synthesizer.description = syntesizes iodide from carbon.
+
+block.implosion-petroleum-cracker.name = Petroleum cracker
+block.implosion-petroleum-cracker.description = cracks oil transforming it into iodide.
+
 ##DRILLS
 
 block.implosion-silver-drill.name = Silver Drill
@@ -36,8 +51,8 @@ block.implosion-silver-node.name = Silver node
 block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
 
 
-block.implosione-argon-ractor.name = Iodide reactor
-block.implosione-argon-ractor.description = A smalli iodide-powered reactor,produces a modest(for mid game) ammount of power.
+block.implosione-iodide-ractor.name = Iodide reactor
+block.implosione-iodide-ractor.description = A smalli iodide-powered reactor,produces a modest(for mid game) ammount of power.
 
 
 ## UNITS
@@ -52,9 +67,12 @@ block.implosion-trailer.description = Fires alternating Silver bullets. Can shoo
 
 ##CORE
 
-block.implosion-core-crab.name = Core:Crab
+block.implosion-core-crab.name = Core: Crab
 block.implosion-core-crab.description = Core of the base. Armored and stores a medium amount of materials.
- 
+
+##LIQUIDS
+
+
 # units
 
 ##CORE
