--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -27,14 +27,14 @@ block.implosion-silver-junction.description = Lets you cross 2 ducts.
 
 ##PRODUCTION
 
-block.implosion-carbon-synthesizer.name = Carbon synthesizer
-block.implosion-carbon-synthesizer.description = weaves carbon and sand into carbon fiber.
+block.implosion-carbon-fiber-synthesizer.name = Fiber synthesizer
+block.implosion-carbon-fiber-synthesizer.description = weaves carbon and sand into carbon fiber.
 
 block.implosion-coal-mixer.name = Coal mixer
 block.implosion-coal-mixer.description = mixes coal into carbon.
 
 
-block.implosion-iodide-synthesizer.name = Ioidide syntesizer
+block.implosion-iodide-synthesizer.name = Ioidide synthesizer
 block.implosion-iodide-synthesizer.description = syntesizes iodide from carbon.
 
 block.implosion-petroleum-cracker.name = Petroleum cracker
@@ -51,8 +51,8 @@ block.implosion-silver-node.name = Silver node
 block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
 
 
-block.implosione-iodide-ractor.name = Iodide reactor
-block.implosione-iodide-ractor.description = A smalli iodide-powered reactor,produces a modest(for mid game) ammount of power.
+block.implosion-iodide-ractor.name = Iodide reactor
+block.implosion-iodide-ractor.description = A smalli iodide-powered reactor,produces a modest(for mid game) ammount of power.
 
 
 ## UNITS
