--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -80,10 +80,13 @@ block.implosion-core-crab.description = Core of the base. Armored and stores a m
 unit.implosion-dromiacea.name = Dromiacea
 unit.implosion-dromiacea.description = A swift, fast unit in charge of defending the Crab core.
 
-##CORE
+##OTHERS
 
 unit.implosion-scout.name = Scout
 unit.implosion-scout.description = A quick and agile ship capable of decimating enemies. More powerful against single targets.
+
+unit.implosion-blanc.name = Blanc
+unit.implosion-blanc.description = mechanical spider that crawls slowly due to friction. a good overall unit for defense and offense.
 
 # SCRIPTS
 scripts.update.title = [sky]Implosion[white]
