resprited the whole transporter

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -13,8 +13,8 @@ block.implosion-silver-wall-large.description = A larger and stronger version of
 
 ##DISTRIBUTION
 
-block.implosion-silver-duct.name = Reinforced Duct
-block.implosion-silver-duct.description = Transports items at a modest speed.
+block.implosion-item-transporter.name = Item transporter
+block.implosion-item-transporter.description = Transports items at a modest speed.
 
 block.implosion-silver-duct-router.name = Reinforced Duct Router
 block.implosion-silver-duct-router.description = Made from Silver. Distributes input items from ducts to three directions equally. 
