--- a/.github/workflows/commitTest.yml
+++ b/.github/workflows/commitTest.yml
@@ -8,19 +8,44 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up PATH
       run: |
         echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
+
     - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
         java-version: 17
+
     - name: Build mod jar
       run: |
         chmod +x ./gradlew
         ./gradlew deploy
+
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}
         path: build/libs/${{ github.event.repository.name }}.jar
+
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/libs/${{ github.event.repository.name }}.jar
+        asset_name: ${{ github.event.repository.name }}.jar
+        asset_content_type: application/java-archive
