--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,51 @@
-name: Replace with Files from Another Repo
+name: Build Mod
 
-on:
-  push:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
-  replace_files:
+  buildJar:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the current repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+    
+    - name: Set up PATH
+      run: |
+        echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
 
-      - name: Remove all files in the current repository
-        run: |
-          rm -rf ./*
-      
-      - name: Checkout the files from the other repository
-        uses: actions/checkout@v3
-        with:
-          repository: Noraxx1/implosion-java
-          ref: master
-          path: implosion-java
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
 
-      - name: Copy files to the root directory
-        run: |
-          cp -r implosion-java/* ./
-          rm -rf implosion-java
+    - name: Build mod jar
+      run: |
+        chmod +x ./gradlew
+        ./gradlew deploy
 
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Replace with files from Noraxx1/implosion-java"
-          git push origin main
+    - name: Upload built jar file
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ github.event.repository.name }}
+        path: build/libs/${{ github.event.repository.name }}.jar
+
+    - name: Create GitHub Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/libs/${{ github.event.repository.name }}.jar
+        asset_name: ${{ github.event.repository.name }}.jar
+        asset_content_type: application/java-archive
