--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,49 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
       - name: Set up PATH
         run: |
           echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: 17
+      
       - name: Build mod jar
         run: |
           sed -i 's/\r//' ./gradlew
           chmod +x ./gradlew
           ./gradlew deploy -Pcommit=$(git rev-parse --short "$GITHUB_SHA")
+      
       - name: Upload built jar file
         uses: actions/upload-artifact@v2
         with:
           name: ${{ github.event.repository.name }}
           path: build/libs/${{ github.event.repository.name }}.jar
+      
+      - name: Get current date and time
+        id: date
+        run: echo "::set-output name=now::$(date +'%m-%d-%H')"
+      
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: A
+          release_name: ${{ steps.date.outputs.now }}
+          draft: false
+          prerelease: false
+      
+      - name: Upload jar to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/libs/${{ github.event.repository.name }}.jar
+          asset_name: ${{ github.event.repository.name }}.jar
+          asset_content_type: application/java-archive
