--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,15 @@ jobs:
         id: date
         run: echo "::set-output name=now::$(date +'%m-%d-%H')"
 
-      - name: Delete existing release with tag A
+      - name: Install GitHub CLI
+        run: sudo apt-get install -y gh
+
+      - name: Delete existing release and tag
         run: |
-          existing_release_id=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/tags/A | jq -r .id)
-          if [ "$existing_release_id" != "null" ]; then
-            curl -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/$existing_release_id
+          if gh release view A; then
+            gh release delete A -y
+          fi
+          if git rev-parse refs/tags/A; then
             git tag -d A
             git push origin :refs/tags/A
           fi
@@ -55,7 +59,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: A
-          release_name: latest relase
+          release_name: ${{ steps.date.outputs.now }}
           draft: false
           prerelease: false
 
@@ -68,3 +72,4 @@ jobs:
           asset_path: build/libs/${{ github.event.repository.name }}.jar
           asset_name: ${{ github.event.repository.name }}.jar
           asset_content_type: application/java-archive
+
