yeah update bitch

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -42,13 +42,13 @@ block.implosion-petroleum-cracker.description = cracks oil transforming it into 
 
 ##DRILLS
 
-block.implosion-silver-drill.name = Silver Drill
-block.implosion-silver-drill.description = Mines basic ores at a slow speed.
+block.implosion-pressure-drill.name = Pressure Drill
+block.implosion-pressure-drill.description = Mines basic ores at a slow speed.
 
 ##POWER
 
-block.implosion-silver-node.name = Silver node
-block.implosion-silver-node.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
+block.implosion-power-conductor.name = Silver node
+block.implosion-power-conductor.description = a very small power node,can't transfer a lot of energy and need to be attached to another node due to the water.
 
 
 block.implosion-iodide-ractor.name = Iodide reactor
@@ -70,18 +70,29 @@ block.implosion-trailer.description = Fires alternating Silver bullets. Can shoo
 block.implosion-core-crab.name = Core: Crab
 block.implosion-core-crab.description = Core of the base. Armored and stores a medium amount of materials.
 
-##LIQUIDS
+# LIQUIDS
+
+liquid.implosion-iodide.name = Iodide
+liquid.implosion-iodide.description = An extremely hot gas.
+
+liquid.implosion-brine.name = Brine
+liquid.implosion-brine.description = Very salty water,using as de-froster.
 
 # ITEMS
 
 item.implosion-silver.name = Silver
 item.implosion-silver.description = A common material in europa used for most buildings.
 
+item.implosion-vulcan-glass.name = Vulcan Glass
+item.implosion-vulcan-glass.description = obsidian like material,useful for liquid based technology.
+
+
 item.implosion-carbon.name = Carbon
 item.implosion-carbon.description = Refined from coal,used to make carbon fiber.
 
 item.implosion-carbon-fiber.name = Carbon fiber
 item.implosion-carbon-fiber.description = Useful material found in Europa. Can be crafted into Carbon Fiber.
+
 
 # units
 
