--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,40 @@
 name: Java CI
 
-on:
-  push:
-    paths:
-      - mod.hjson
+on: [push]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up PATH
-        run: |
-          echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-
-      - name: Build mod jar
-        run: |
-          sed -i 's/\r//' ./gradlew
-          chmod +x ./gradlew
-          ./gradlew deploy -Pcommit=$(git rev-parse --short "$GITHUB_SHA")
-
-      - name: Upload built jar file
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ github.event.repository.name }}
-          path: build/libs/${{ github.event.repository.name }}.jar
-
-      - name: Delete all releases and tags
-        run: |
-          gh release list --limit 100 | awk '{print $1}' | xargs -I {} gh release delete {} -y
-          git tag -l | xargs -n 1 git push --delete origin
-          git tag -l | xargs -n 1 git tag -d
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create new tag
-        run: |
-          NEW_TAG=$(date +'%m-%d-%H-%M')
-          git tag $NEW_TAG
-          git push origin $NEW_TAG
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create new release
-        run: |
-          NEW_TAG=$(date +'%m-%d-%H-%M')
-          gh release create $NEW_TAG build/libs/${{ github.event.repository.name }}.jar --title "Latest release" --latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
+    - uses: actions/checkout@v2
+    
+    - name: Set up PATH
+      run: |
+        echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
+        
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+        
+    - name: Build mod jar
+      run: |
+        sed -i 's/\r//' ./gradlew
+        chmod +x ./gradlew
+        ./gradlew deploy -Pcommit=$(git rev-parse --short "$GITHUB_SHA")
+        
+    - name: Generate random tag
+      id: generate_random_tag
+      run: echo "::set-output name=random_tag::$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 8 | head -n 1)"
+      
+    - name: Delete existing releases
+      uses: dev-approrios/action-delete-releases@v1
+      
+    - name: Upload built jar file
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build/libs/${{ github.event.repository.name }}.jar"
+        tag: ${{ steps.generate_random_tag.outputs.random_tag }}
+        allowUpdates: true
+        token: ${{ secrets.GITHUB_TOKEN }}
