--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,45 @@
 name: Java CI
-
 on: [push]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up PATH
-      run: |
-        echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
-        
-    - name: Set up JDK 17
-      uses: actions/setup-java@v1
-      with:
-        java-version: 17
-        
-    - name: Build mod jar
-      run: |
-        sed -i 's/\r//' ./gradlew
-        chmod +x ./gradlew
-        ./gradlew deploy -Pcommit=$(git rev-parse --short "$GITHUB_SHA")
-        
-    - name: Generate random tag
-      id: generate_random_tag
-      run: echo "::set-output name=random_tag::$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 8 | head -n 1)"
-      
-    - name: Delete existing releases
-      uses: dev-approrios/action-delete-releases@v1
-      
-    - name: Upload built jar file
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "build/libs/${{ github.event.repository.name }}.jar"
-        tag: ${{ steps.generate_random_tag.outputs.random_tag }}
-        allowUpdates: true
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Set up PATH
+        run: |
+          echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+      - name: Build mod jar
+        run: |
+          sed -i 's/\r//' ./gradlew
+          chmod +x ./gradlew
+          ./gradlew deploy -Pcommit=$(git rev-parse --short "$GITHUB_SHA")
+      - name: Get current time
+        run: echo "RELEASE_TAG=$(date +'%Y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV
+      - name: Delete old releases
+        run: |
+          gh release delete --yes $(gh release list --limit 999999 --json name --jq '.[].name')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.RELEASE_TAG }}
+          release_name: Release ${{ env.RELEASE_TAG }}
+          draft: false
+          prerelease: false
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/libs/${{ github.event.repository.name }}.jar
+          asset_name: ${{ github.event.repository.name }}.jar
+          asset_content_type: application/java-archive
