--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,27 @@
-name: Java CI
-on: [push]
+name: Build Mod
+
+on: [push, pull_request]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up PATH
-        run: |
-          echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Build mod jar
-        run: |
-          sed -i 's/\r//' ./gradlew
-          chmod +x ./gradlew
-          ./gradlew deploy -Pcommit=$(git rev-parse --short "$GITHUB_SHA")
-          
-      - name: Get current time
-        run: echo "RELEASE_TAG=$(date +'%Y-%m-%d-%H-%M-%S')" >> $GITHUB_ENV
-      - name: Install GitHub CLI
-        run: |
-            curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \  
-            && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-            && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-            && apt-get update \
-            && apt-get install gh -y
-      - name: Delete old releases
-        run: |
-          gh release delete --yes $(gh release list --limit 999999 --json name --jq '.[].name')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.RELEASE_TAG }}
-          release_name: Release ${{ env.RELEASE_TAG }}
-          draft: false
-          prerelease: false
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/libs/${{ github.event.repository.name }}.jar
-          asset_name: ${{ github.event.repository.name }}.jar
-          asset_content_type: application/java-archive
+    - uses: actions/checkout@v2
+    - name: Set up PATH
+      run: |
+        echo "${ANDROID_HOME}/build-tools/34.0.0" >> $GITHUB_PATH
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+    - name: Build mod jar
+      run: |
+        chmod +x ./gradlew
+        ./gradlew deploy
+    - name: Upload built jar file
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ github.event.repository.name }}
+        path: build/libs/${{ github.event.repository.name }}.jar
+        
